--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,16 +1,16 @@
-<section class="about-section py-5">
-  <div class="container">
-    <h2 class="text-center mb-4">About Me</h2>
+<section class="about-section py-1">
+  <div class="container-style"> <!-- Use the shared class -->
+    <h2 class="text-center">About Me</h2>
     <div class="row">
       <div class="col-md-6">
-        <img src="https://via.placeholder.com/400x400" alt="Profile" class="img-fluid rounded-circle">
+        <img src="/assets/images/about/my-profile.jpg" alt="Profile" class="img-fluid rounded-circle">
       </div>
-      <div class="col-md-6">
+      <div class="col-md-5 about-text">
         <p>
           I am Kaung Htet San, a dedicated System Administrator and Software Engineer with over 6 years of experience in software development, system administration, and cloud technologies. Throughout my career at FPT Vietnam and Innomax Tier Global Co. Ltd, I have developed a strong expertise in C# .NET Core, Entity Framework, API development, AWS, Azure, SQL, and system integrations.
         </p>
         <p>
-          I am passionate about building scalable and efficient solutions that solve real-world problems. Let's connect and create something amazing!
+          I am passionate about building scalable and efficient solutions that solve real-world problems. I enjoy solving complex challenges, optimizing system performance, and working on innovative projects that make a meaningful impact. Learning new technologies and collaborating with like-minded professionals keeps me motivated. 
         </p>
       </div>
     </div>
