--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,20 @@
 <section class="hero-section">
   <div class="container text-center">
-    <h1 class="display-4">Welcome to My Portfolio</h1>
-    <p class="lead">I build scalable and efficient software solutions.</p>
-    <a routerLink="/about" class="btn btn-primary btn-lg">See More</a>
+    <h1 class="display-4">Hello! I’m Kaung Htet San</h1>
+    <p class="lead">
+      Senior Software Developer
+    </p>
+    <p>
+      With 6+ years of experience in designing and developing scalable, high-performance solutions using 
+      <strong>C# .NET, Azure, and AWS</strong>. I specialize in API development, system integration, 
+      and cloud computing, ensuring optimized and efficient solutions.
+    </p>
+    <p>
+      Passionate about solving complex problems, optimizing system architecture, and leveraging modern technologies 
+      to build robust and scalable applications.
+    </p>
+     <a href="assets/files/kaunghtetsan_resume.pdf" download class="btn btn-outline-secondary btn-lg">
+      <i class="fas fa-download"></i> Download Resume
+    </a>
   </div>
 </section>
