--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,29 +1,32 @@
-<section class="contact-section py-5">
-  <div class="container">
+<section class="contact-section py-1" >
+  <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
     <h2 class="text-center mb-4">Contact Me</h2>
-    <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+   
       <div class="mb-3">
         <label for="name" class="form-label">Name</label>
-        <input type="text" class="form-control" id="name" formControlName="name">
+        <input type="text" class="form-control" id="name" formControlName="name" placeholder="Enter your name or company name">
         <div *ngIf="contactForm.get('name')?.invalid && contactForm.get('name')?.touched" class="text-danger">
           Name is required.
         </div>
       </div>
       <div class="mb-3">
         <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" formControlName="email">
+        <input type="email" class="form-control" id="email" formControlName="email" placeholder="Enter your email">
         <div *ngIf="contactForm.get('email')?.invalid && contactForm.get('email')?.touched" class="text-danger">
           Please enter a valid email.
         </div>
       </div>
       <div class="mb-3">
-        <label for="message" class="form-label">Message</label>
-        <textarea class="form-control" id="message" rows="5" formControlName="message"></textarea>
+        <label for="message" class="form-label" >Message</label>
+        <textarea class="form-control" id="message" rows="5" formControlName="message" placeholder="Text me somethings..."></textarea>
         <div *ngIf="contactForm.get('message')?.invalid && contactForm.get('message')?.touched" class="text-danger">
           Message is required.
         </div>
       </div>
       <button type="submit" class="btn btn-primary" [disabled]="contactForm.invalid">Submit</button>
-    </form>
-  </div>
+      <!-- Success Message -->
+      <div *ngIf="messageStatus" [ngClass]="isError ? 'alert alert-danger' : 'alert alert-success'">
+        {{ messageStatus }}
+      </div>
+      </form>
 </section>
