--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,8 +1,8 @@
-<section class="projects-section py-5">
-  <div class="container">
-    <h2 class="text-center mb-4">Projects</h2>
+<!--<section class="projects-section py-1">
+  <div class="container-style"> 
+    <h2 class="text-center">Projects</h2>
     <div class="row">
-      <div class="col-md-6" *ngFor="let project of projects">
+      <div class="col-md-4" *ngFor="let project of projects">
         <div class="card mb-3">
           <img [src]="project.image" class="card-img-top" alt="{{ project.title }}">
           <div class="card-body">
@@ -14,4 +14,28 @@
       </div>
     </div>
   </div>
+</section>-->
+<section class="projects-section py-1">
+  <div class="container-style">
+    <h2 class="text-center">Projects</h2>
+    <div class="row">
+      <div class="col-md-4" *ngFor="let project of projects">
+        <div class="card mb-3">
+          <img [src]="project.image" class="card-img-top" alt="{{ project.title }}">
+          <div class="card-body">
+            <h5 class="card-title">{{ project.title }}</h5>
+            <p class="card-text">{{ project.description }}</p>
+            <button (click)="onViewProject(project)" class="btn btn-primary">View Project</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Updated selector -->
+  <app-projectdetails
+    *ngIf="showPopup"
+    [project]="selectedProject"
+    (close)="onClosePopup()"
+  ></app-projectdetails>
 </section>
