--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,15 @@ html, body {
 }
 
 body {
-    background: url('/assets/hero-bg.jpg') no-repeat center center fixed;
+    background: url('/assets/images/home/hero-bg.jpg') no-repeat center center fixed;
     background-size: cover;
 }
+.container-style {
+    max-width: 1100px;
+    max-height:600px;
+    margin: 0 auto;
+    background: #fff;
+    overflow-y: auto; /* Enable vertical scrolling */
+    padding: 20px;
+    border-radius: 20px;
+    }
