commit to development

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,16 +1,19 @@
-<section class="about-section py-1">
+<section class="about-section py-4">
   <div class="container-style"> <!-- Use the shared class -->
-    <h2 class="text-center">About Me</h2>
-    <div class="row">
-      <div class="col-md-6">
-        <img src="/assets/images/about/my-profile.jpg" alt="Profile" class="img-fluid rounded-circle">
+    <h2 class="text-center mb-4">About Me</h2>
+    <div class="row align-items-center">
+      <div class="col-md-6 text-center">
+        <img src="/assets/images/about/my-profile.jpg" alt="Profile" class="img-fluid rounded-circle profile-img">
       </div>
-      <div class="col-md-5 about-text">
+      <div class="col-md-6 about-text">
         <p>
-          I am Kaung Htet San, a dedicated System Administrator and Software Engineer with over 6 years of experience in software development, system administration, and cloud technologies. Throughout my career at FPT Vietnam and Innomax Tier Global Co. Ltd, I have developed a strong expertise in C# .NET Core, Entity Framework, API development, AWS, Azure, SQL, and system integrations.
+          &nbsp;&nbsp;&nbsp;&nbsp;I am <strong>Kaung Htet San</strong>, a dedicated <strong>System Administrator and Software Engineer</strong> with over <strong>six years of experience</strong> in software development, system administration, and cloud technologies. Throughout my career at <strong>FPT Vietnam</strong> and <strong>Innomax Tier Global Co. Ltd</strong>, I have built expertise in <strong>C# .NET Core, Entity Framework, API development, AWS, Azure, SQL, and system integrations</strong>.
         </p>
         <p>
-          I am passionate about building scalable and efficient solutions that solve real-world problems. I enjoy solving complex challenges, optimizing system performance, and working on innovative projects that make a meaningful impact. Learning new technologies and collaborating with like-minded professionals keeps me motivated. 
+          &nbsp;&nbsp;&nbsp;&nbsp;I am passionate about building <strong>scalable and efficient solutions</strong> that solve real-world problems. My work focuses on <strong>system optimization, integrations, and automation</strong>. I enjoy tackling complex challenges, improving system performance, and developing solutions that make a meaningful impact.  
+        </p>
+        <p>
+          &nbsp;&nbsp;&nbsp;&nbsp;Always eager to learn, I thrive on working with new technologies and collaborating with like-minded professionals to push the boundaries of innovation.
         </p>
       </div>
     </div>
