--- a/src/app/components/projectdetails/projectdetails.component.html
+++ b/src/app/components/projectdetails/projectdetails.component.html
@@ -1,13 +1,8 @@
-<div class="popup-overlay" *ngIf="project">
-    <div class="popup-box">
-      <button class="close-button" (click)="onClose()">X</button>
-      <h2>{{ project.title }}</h2>
-      <p>{{ project.description }}</p>
-      <h3>Technologies Used:</h3>
-      <ul>
-        <li *ngFor="let tech of project.technologies">{{ tech }}</li>
-      </ul>
-      <strong>Team Members : </strong> <p>{{project.headcount}}</p>
-      
-    </div>
-  </div>
+<div class="project-dialog">
+  <h2 class="text-center">{{ project.title }}</h2>
+  <img [src]="project.image" class="project-image" alt="{{ project.title }}">
+  <p><strong>Description:</strong> {{ project.description }}</p>
+  <p><strong>Technologies:</strong> {{ project.technologies }}</p>
+  <p><strong>Headcount:</strong> {{ project.headcount }}</p>
+  <button mat-button (click)="closeDialog()">Close</button>
+</div>
