--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,19 +1,19 @@
 <section class="about-section py-4">
-  <div class="container-style"> <!-- Use the shared class -->
+  <div class="container-style">
     <h2 class="text-center mb-4">About Me</h2>
     <div class="row align-items-center">
       <div class="col-md-6 text-center">
-        <img src="assets/images/about/my-profile.jpg" alt="Profile" class="img-fluid rounded-circle profile-img">
+        <img src="assets/images/about/my-profile.webp" alt="Profile" class="img-fluid rounded-circle profile-img">
       </div>
       <div class="col-md-6 about-text">
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;I am <strong>Kaung Htet San</strong>, a dedicated <strong>System Administrator and Software Engineer</strong> with over <strong>six years of experience</strong> in software development, system administration, and cloud technologies. Throughout my career at <strong>FPT Vietnam</strong> and <strong>Innomax Tier Global Co. Ltd</strong>, I have built expertise in <strong>C# .NET Core, Entity Framework, API development, AWS, Azure, SQL, and system integrations</strong>.
+          &nbsp;&nbsp;&nbsp;&nbsp;I am <strong>Kaung Htet San</strong>, a dedicated <strong>Senior Software Developer</strong> with over <strong>six years of experience</strong> in software development, cloud computing, and system architecture. My journey began on <strong>May 2, 2018</strong>, and since then, I have been committed to building scalable, high-performance solutions.
         </p>
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;I am passionate about building <strong>scalable and efficient solutions</strong> that solve real-world problems. My work focuses on <strong>system optimization, integrations, and automation</strong>. I enjoy tackling complex challenges, improving system performance, and developing solutions that make a meaningful impact.  
+          &nbsp;&nbsp;&nbsp;&nbsp;I specialize in <strong>C# .NET, API development, system integration, Azure, AWS, SQL, and automation</strong>. I have been involved in designing and optimizing enterprise-level applications, ensuring efficiency, security, and scalability.
         </p>
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;Always eager to learn, I thrive on working with new technologies and collaborating with like-minded professionals to push the boundaries of innovation.
+          &nbsp;&nbsp;&nbsp;&nbsp;Passionate about solving complex challenges, I focus on <strong>enhancing system performance, improving software architecture, and leveraging modern technologies</strong> to develop robust and maintainable solutions. I thrive in collaborative environments and continuously seek opportunities to innovate and grow in the ever-evolving field of software engineering.
         </p>
       </div>
     </div>
