--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,16 +5,20 @@
       Senior Software Developer
     </p>
     <p>
-      With 6+ years of experience in designing and developing scalable, high-performance solutions using 
-      <strong>C# .NET, Azure, and AWS</strong>. I specialize in API development, system integration, 
-      and cloud computing, ensuring optimized and efficient solutions.
+      My journey in software development began on <strong>May 2, 2018</strong>. With over <strong>six years of experience</strong>, 
+      I specialize in designing and developing scalable, high-performance solutions using 
+      <strong>C# .NET, Azure, and AWS</strong>.
     </p>
     <p>
-      Passionate about solving complex problems, optimizing system architecture, and leveraging modern technologies 
-      to build robust and scalable applications.
+      My expertise lies in <strong>API development, system integration, and cloud computing</strong>, ensuring optimized, 
+      efficient, and maintainable software solutions.
     </p>
-     <a href="assets/files/kaunghtetsan_resume.pdf" download class="btn btn-outline-secondary btn-lg">
-      <i class="fas fa-download"></i> Download Resume
+    <p>
+      I am passionate about <strong>solving complex challenges, enhancing system architecture, and leveraging modern technologies</strong> 
+      to build robust, scalable applications that drive innovation and efficiency.
+    </p>
+    <a href="assets/files/kaunghtetsan_resume.pdf" download class="btn btn-outline-secondary btn-lg">
+      <i class="fas fa-download"></i>Download Resume
     </a>
   </div>
 </section>
