--- a/src/app/components/projectdetails/projectdetails.component.css
+++ b/src/app/components/projectdetails/projectdetails.component.css
@@ -36,7 +36,7 @@
     font-size: 16px;
     margin-top: 15px;
     display: block;
-    margin-right: auto; /* Align button to the left */
+    margin-right: auto; /* Align button to the right */
   }
   
   button:hover {
