--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -38,3 +38,8 @@
   padding: 20px 0;
   border-radius: 20px;
 }
+.skills-section .card img {
+  width: 80px;
+  height: 80px; 
+  object-fit: contain; 
+}
