--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-    background: url('/assets/images/home/hero-bg.jpg') no-repeat center center fixed;
+    /*background: url('assets/images/home/hero-bg.jpg') no-repeat center center fixed;*/
     background-size: cover;
 }
 .container-style {
@@ -14,7 +14,7 @@ body {
     max-height:600px;
     margin: 0 auto;
     background: #fff;
-    overflow-y: auto; /* Enable vertical scrolling */
+    overflow-y: auto;
     padding: 20px;
     border-radius: 20px;
     }
